# uptime-probe

./: .gitignore  Cargo.toml  Dockerfile  README.md  cfg.sample.yaml
.circleci/: config.yml
charts/uptime-probe/: Chart.yaml  values.yaml
charts/uptime-probe/templates/: alertrules.yaml  configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
scripts/: deploy.sh  integration-tests.sh
src/: checker.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs
test-server/: app.js  package.json
