[package]
name = "uptime_probe"
version = "0.1.0"
authors = ["Federico Gimenez <federico@web3.foundation>"]
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-tls = "0.3.2"
iron = "0.5.1"
lazy_static = "1.3.0"
mime = "0.2.3"
prometheus = "0.4"
router = "0.5.1"
serde = "1.0"
serde_derive = "1.0.90"
serde_yaml = "0.8"
tempfile = "3"
urlencoded = "0.5.0"
